--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,38 @@
   }
 
   .nav {
-    @apply flex justify-between items-center	 bg-border h-10 px-20 text-xxxs sm:text-xxs text-text md:text-xs;
+    @apply flex md:justify-between justify-center items-center	 bg-border h-10 px-8  md:px-20 text-xxxs   text-text sm:text-xs;
+  }
+
+  .border-b-1 {
+    border-bottom-width: 1px;
+  }
+
+  .border-1 {
+    border-width: 1px;
+  }
+
+  .search-button {
+    @apply h-12 w-12 bg-background3 flex items-center justify-center cursor-pointer;
+  }
+
+  .search-button-under {
+    @apply h-8 w-8 sm:h-10 sm:w-10 bg-background3 flex items-center justify-center cursor-pointer;
+  }
+
+  .search {
+    @apply flex w-full justify-center items-center focus-within:border-1 focus-within:rounded-xl focus-within:border-primary border-1 rounded-xl border-background3;
+  }
+
+  .search-input {
+    @apply h-12 sm:w-40 md:w-48 lg:w-96 bg-background3 focus:outline-none placeholder:text-text placeholder:text-sm;
+  }
+
+  .search-under {
+    @apply h-8 sm:h-10 w-full bg-background3 focus:outline-none placeholder:text-text placeholder:text-xs;
+  }
+
+  .mid-text {
+    @apply text-text text-xxxs sm:text-sm md:text-base;
   }
 }
